Align date and counter correctly

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,6 +43,14 @@ body {
     color: #38800a;
 }
 
+.date {
+    float: left;
+}
+
 .counter {
     float: right;
+}
+
+.clear {
+    clear: both;
 }
